# Algoritms_FEP-23

Lab01_Algoritms/: CMakeLists.txt  Sort.cpp  Sort.h  main.cpp
Lab02_Algoritms/: CMakeLists.txt
Lab02_Algoritms/Lab_02_01/: main.cpp
Lab02_Algoritms/Lab_02_02/: main.cpp
Lab02_Algoritms/Sort/: Sort.cpp  Sort.h
Lab03_Algoritms/: CMakeLists.txt  main.cpp
Lab03_Algoritms/Sort/: Sort.cpp  Sort.h
Lab04_Algoritms/: CMakeLists.txt  README.md
Lab04_Algoritms/include/: Tree.h
Lab04_Algoritms/src/: Lab_04_01.cpp  Lab_04_02.cpp  Tree.cpp
Lab05_Algoritms/: CMakeLists.txt  Heap.cpp  Heap.h
Lab05_Algoritms/Part1/: main.cpp
Lab05_Algoritms/Part2/: main.cpp
